2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/bookmarks/ephy-bookmark-action.c: (connect_proxy):

	Use gtk_widget_set_has_tooltip here.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),
	(ephy_embed_shell_get_page_setup),
	(ephy_embed_shell_set_print_settings),
	(ephy_embed_shell_get_print_settings):
	* lib/ephy-print-utils.c:
	* lib/ephy-print-utils.h:

	Use the new gtk functions to persist and load the print settings and
	page setup. Migrate our old settings, if present.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/ephy-notebook.c: (sync_label):

	Remove NULL-check here.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/bookmarks/ephy-bookmark-action.c: (query_tooltip_cb),
	(connect_proxy), (ephy_bookmark_action_updated),
	(ephy_bookmark_action_class_init):

	Port to new tooltips API. Fixes bug #347637.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:

        Remove gtk version check since we now depend on 2.11.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* lib/widgets/ephy-location-entry.c: (cursor_on_match_cb),
	(ephy_location_entry_set_completion):

	Remove gtk version check since we now depend on 2.11.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* lib/widgets/ephy-location-entry.c:
	(ephy_location_entry_finalize), (ephy_location_entry_class_init),
	(ephy_location_entry_construct_contents),
	(ephy_location_entry_init), (ephy_location_entry_set_lock_tooltip):

	Port to new tooltips API.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* lib/widgets/ephy-zoom-action.c: (ephy_zoom_action_class_init):
	* lib/widgets/ephy-zoom-control.c: (ephy_zoom_control_class_init):

        Port to new tooltips API.

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/ephy-navigation-action.c: (connect_proxy),
	(ephy_navigation_action_class_init):

	Port to new tooltips API.
	
2007-07-10  Christian Persch  <chpe@gnome.org>
