@@ -74,7 +74,7 @@ if test "x$enable_maintainer_mode" = "xyes"; then
 	MOZILLA_WARN_CXXFLAGS="-Wall -Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth $MOZILLA_WARN_CXXFLAGS"
 fi
 
-GLIB_REQUIRED=2.12.0
+GLIB_REQUIRED=2.13.4
 GTK_REQUIRED=2.11.6
 LIBXML_REQUIRED=2.6.12
 LIBXSLT_REQUIRED=1.1.7
